data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1913.wast
;; 4. **Test 4: `br_if` with indirect function calls within blocks**    - **Constraint**: Ensures `br_if` correctly handles indirect function calls before branching.    - **Check**: Confirms the operand stack is correctly handled after function returns.    - **Relation to Edge Cases**: Tests if `br_table` manages stack state correctly when indirect function calls are involved before branching.

(assert_invalid
  (module (func $test-br_if-indirect-func (param i32) (result i32)
    (block (result i32)
      (call_indirect (type (func (param i32) (result i32))) (local.get 0) (i32.const 1))
      (br_if 0 (i32.const 1))
      (i32.const 0)
    )
  ))
  "type mismatch"
)